# ChickenManagement

./: .dockerignore  .env.example  .gitignore  .replit  CREDENCIALES-ADMIN.md  CREDENCIALES.md  DEPLOYMENT.md  INSTRUCCIONES_DESPLIEGUE.md  create_user.js  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  theme.json
ai_prediction/: __init__.py  api.py  data_processor.py  db_connector.py  main.py  prediction_service.py
attached_assets/: Pasted--DIFERENCIAS-Y-FALLOS-DE-DISE-O-1-Estilo-visual-y-coherencia-crom-tica-Fallos-En-tu-interfaz-e-1754248406355_1754248406355.txt  Pasted--Prepare-Stock-Update-Estado-actual-current-id-16-date-2025-03-11T00-00-00-00-1741694153465.txt  Pasted--Prepare-Stock-Update-Estado-actual-current-id-16-date-2025-03-11T00-00-00-00-1741694377608.txt  Pasted--Storage-Update-Order-Database-error-RangeError-Invalid-time-value-at-Date-toISOString--1742498045390.txt  Pasted--Storage-Update-Order-Starting-update-for-order-5-Storage-Update-Order-Input-data--1741694123284.txt  Pasted--body-class-home-page-template-page-template-templates-page-template-page-flexible-page-template-te-1740664117868.txt  Pasted--cristina-perez-martinez-9-rese-as-Hace-6-meses-Hemos-pedido-3-d-as-para-comer-en-fie-1743106043582.txt  Pasted--div-jsaction-ytNONe-class-a-h-data-ved-2ahUKEwjUm5ry6u2LAxWXS-EDHQLPBc0Q5nF6BAhBEAQ-div-jsna-1741002418035.txt  Pasted--tsx-server-index-ts-10-45-14-AM-express-serving-on-port-5000-10-45-24-AM-express-GET-api--1741171673073.txt  asadorlamorenica_com.md  asadorlamorenica_com_contacto.md  (+27 more)
(+108 files in other folders)
